// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.springdemo.medicationDispenser";
option java_outer_classname = "Proto";
option objc_class_prefix = "HLW";

package Assignment3;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (Request) returns (AllReplies) {}
  rpc transmitResponse (AllReplies) returns (Request) {}
  rpc transmitPositiveResponse (Reply) returns (Request) {}
}

// The request message containing the user's name.
message Request {
    string date = 1;
}

// The response message containing the greetings
message Reply {
  string name = 1;
  string medicationName = 2;
  string startDate = 3;
  string endDate = 4;
  string dosage = 5;
  string intakeInterval = 6;
}

message AllReplies {
    repeated Reply repliesList = 1;
}
